--- a/index.html
+++ b/index.html
@@ -5,9 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css   " />
-    <title>Document</title>
+    <title>Product Modal</title>
   </head>
   <body>
-    <h1 class="text-3xl text-red-900">Tailwind is awesome</h1>
+    <!-- Global Container -->
+    <main class="flex items-center justify-center min-h-screen bg-slate-100">
+      <!-- Card Container -->
+      <section
+        class="product-modal p-6 m-3 space-y-10 flex flex-col rounded-2xl shadow-2xl bg-white md:flex-row md:space-y-0 md:space-x-10 md:m-0 md:p-16"
+      >
+        <!-- Image Div -->
+        <div>
+          <img
+            src="img/headphone.png"
+            class="mx-auto hover:scale-x-105 duration-200 w-60"
+            alt="a brown headphone"
+          />
+        </div>
+
+        <!-- Product Content -->
+        <div class="flex flex-col space-y-6">
+          <!-- Label & description container -->
+          <div class="flex flex-col mb-4 space-y-3 text-center md:text-left">
+            <div>
+              <span
+                class="inline-block px-3 py-1 text-sm text-white bg-black rounded-full"
+              >
+                Free shipping
+              </span>
+            </div>
+
+            <!-- Description -->
+            <h1 class="max-w-sm text-2xl font-medium">
+              Razer Kraken Kitty Edt Gaming Headset Quartz
+            </h1>
+
+            <!-- Price container -->
+            <div class="flex flex-col mb-4 space-y-3 text-center md:text-left">
+              <del><span class="sr-only">old price</span>$799</del>
+              <p class="text-5xl font-bold">
+                <span class="sr-only">current price</span>$599
+              </p>
+              <p class="text-sm font-light text-gray-400">
+                This offer is valid until April 3rd or as long as stock last
+              </p>
+            </div>
+
+            <!-- Button -->
+            <div class="group">
+              <button
+                type="submit"
+                class="w-full transition-all duration-150 bg-blue-700 text-white border-b-8 border-blue-700 rounded-lg group-hover:border-t-8 group-hover:border-b-0 group-hover:bg-blue-700 group-hover:border-t-blue-700 group-hover:shadow-lg"
+              >
+                <span class="sr-only">Add to cart</span>
+                <div
+                  class="px-8 py-4 duration-150 bg-blue-500 rounded-lg group-hover:bg-blue-700"
+                >
+                  Add to cart
+                </div>
+              </button>
+            </div>
+
+            <div class="flex items-center space-x-3 group">
+              <div
+                class="w-3 h-3 bg-green-400 rounded-full group-hover:animate-ping"
+              ></div>
+              <div class="text-sm">50+ pcs. in stock</div>
+            </div>
+
+            <!-- Botto Buttons Container -->
+            <div
+              class="flex flex-col space-y-4 md:space-y-0 md:space-x-4 md:flex-row"
+            >
+              <button
+                class="flex items-center justify-center py-3 px-5 space-x-3 border-2 border-gray-300 rounded-lg shadow-sm hover:bg-opacity-30 hover:shadow-lg hover:-translate-y-0.5 transition-all duration-150"
+                type="submit"
+              >
+                <img src="img/weight.png" alt="" />
+                <span>Add to cart</span>
+              </button>
+
+              <button
+                class="flex items-center justify-center py-3 px-5 space-x-3 border-2 border-gray-300 rounded-lg shadow-sm hover:bg-opacity-30 hover:shadow-lg hover:-translate-y-0.5 transition-all duration-150"
+                type="submit"
+              >
+                <img src="img/heart.png" alt="" />
+                <span>Add to wishlist</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
